--- a/index.html
+++ b/index.html
@@ -20,11 +20,8 @@
         <button class="form-button" data-form-button =""> Novo Item </button>
       </form>
 
-      <ul class="list">
-        <li class="list">
-          <p class="task">Comprar a abacate</p>
-        </li>
-      
+      <ul class="list" data-lista>
+        
       </ul>
     </div>
 
